crates/dusty-macros/tests/ui/missing_scope.stderr
error: #[component] function's first parameter must be `cx: Scope`
 --> tests/ui/missing_scope.rs:5:14
  |
5 | fn Bad(name: String) -> Node {
  |              ^^^^^^

warning: unused import: `dusty_core::node::Node`
 --> tests/ui/missing_scope.rs:1:5
  |
1 | use dusty_core::node::Node;
  |     ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
